--- a/pjtabbar_staticlibrary/oh-package.json5
+++ b/pjtabbar_staticlibrary/oh-package.json5
@@ -29,5 +29,7 @@
   "type": "module",
   "license": "Apache-2.0",
   "dependencies": {
-  }
+  },
+  "homepage": "https://gitee.com/weng-jinshan/PJTabBar",
+  "repository": "https://gitee.com/weng-jinshan/PJTabBar"
 }
