更新组织名

--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,7 +6,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@ohos/pjtabbar": "file:../pjtabbar_staticlibrary"
+    "@piaojin/pjtabbar": "file:../pjtabbar_staticlibrary"
   }
 }
 
