--- a/pjtabbar_staticlibrary/oh-package.json5
+++ b/pjtabbar_staticlibrary/oh-package.json5
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "PJTabBar是一个用于替换系统Tabs的控件，支持自定义指示器，tabbar item, tabbar item的布局(居左居中居右), tabbar的左右附加额外视图等。\nPJTabBar is a component used for insteading of Tabs. PJTabBar support customize the indicator, tab item, tabbar layout(left, center, right) and so on. ",
   "main": "index.ets",
-  "author": "{name: piaojin, email: 804488815@qq.com}",
+  "author": "piaojin",
   "keywords": [
     "OpenHarmony",
     "indicator",
