--- a/pjtabbar_staticlibrary/oh-package.json5
+++ b/pjtabbar_staticlibrary/oh-package.json5
@@ -30,6 +30,6 @@
   "license": "Apache-2.0",
   "dependencies": {
   },
-  "homepage": "https://gitee.com/weng-jinshan \nhttps://github.com/piaojin/PJTabBar",
-  "repository": "https://gitee.com/weng-jinshan/PJTabBar \nhttps://github.com/piaojin/PJTabBar"
+  "homepage": "https://gitee.com/weng-jinshan",
+  "repository": "https://gitee.com/weng-jinshan/PJTabBar"
 }
